--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 ---
 layout: page
-title: About Me
-description: This is what I do.
+title: About 365 Days of Code
+{% comment %} description: {% endcomment %}
 background: '/img/bg-about.jpg'
 ---
+
+**365 Days of Code** is an initiative to iteratively improve in coding, one day at at time.
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
 
