Update author; add first post; update background images

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About 365 Days of Code
 {% comment %} description: {% endcomment %}
-background: '/img/bg-about.jpg'
+background: '/img/bg-index.jpg'
 ---
 
 **365 Days of Code** is an initiative to iteratively improve in coding, one day at at time.
